Cambio a vídeo lazy!

--- a/src/constructor.html
+++ b/src/constructor.html
@@ -30,7 +30,7 @@
             <div class="col-6">
                 <section class="seccion">
                     <article class="seccion__contenido">
-                        <h3>Carrera como piloto</h3>
+                        <h3>Carrera como constructor</h3>
                         <div class="container">
                             <div class="row">
                                 <div class="col-1">
