--- a/src/presentacion.html
+++ b/src/presentacion.html
@@ -83,6 +83,7 @@
                             <h3>Carroll Shelby con sus propias palabras</h3>
                             <div class="align--center video__container">
                                 <iframe
+                                    loading="lazy"
                                     width="560"
                                     height="315"
                                     class="video"
