--- a/src/piloto.html
+++ b/src/piloto.html
@@ -75,15 +75,15 @@
                                                 <picture>
                                                     <source
                                                         media="(max-width: 800px)"
-                                                        srcset="./assets/img/carroll-shelby-volante-coches-2647593@mobile.jpg"
+                                                        srcset="./assets/img/carroll-shelby-volante-coches-2647593@mobile.webp"
                                                     />
                                                     <source
                                                         media="(min-width: 801px)"
-                                                        srcset="./assets/img/carroll-shelby-volante-coches-2647593@tablet.jpg"
+                                                        srcset="./assets/img/carroll-shelby-volante-coches-2647593@tablet.webp"
                                                     />
                                                     <img
                                                         class="img__responsive"
-                                                        src="./assets/img/carroll-shelby-volante-coches-2647593@tablet.jpg"
+                                                        src="./assets/img/carroll-shelby-volante-coches-2647593@tablet.webp"
                                                         alt="Carroll Shelby tras un volante"
                                                         loading="lazy"
                                                     />
