Cambio a formato avif

--- a/src/constructor.html
+++ b/src/constructor.html
@@ -106,12 +106,12 @@
                                                 <img
                                                     class="img__responsive"
                                                     srcset="
-                                                        ./assets/img/Blue_Cobra_by_Blue_Pacific@mobile.webp  320w,
-                                                        ./assets/img/Blue_Cobra_by_Blue_Pacific@tablet.webp  768w,
-                                                        ./assets/img/Blue_Cobra_by_Blue_Pacific.webp        1024w
+                                                        ./assets/img/Blue_Cobra_by_Blue_Pacific@mobile.avif  320w,
+                                                        ./assets/img/Blue_Cobra_by_Blue_Pacific@tablet.avif  768w,
+                                                        ./assets/img/Blue_Cobra_by_Blue_Pacific.avif        1024w
                                                     "
                                                     sizes="90vw"
-                                                    src="./assets/img/Blue_Cobra_by_Blue_Pacific.webp"
+                                                    src="./assets/img/Blue_Cobra_by_Blue_Pacific.avif"
                                                     alt="Cobra Shelby azul"
                                                     loading="lazy"
                                                 />
