--- a/src/otros.html
+++ b/src/otros.html
@@ -74,12 +74,12 @@
                                                 <img
                                                     class="img__responsive"
                                                     srcset="
-                                                        ./assets/img/4.0_L_V8_Aurora@mobile.webp  320w,
-                                                        ./assets/img/4.0_L_V8_Aurora@tablet.webp  768w,
-                                                        ./assets/img/4.0_L_V8_Aurora.webp        1024w
+                                                        ./assets/img/4.0_L_V8_Aurora@mobile.avif  320w,
+                                                        ./assets/img/4.0_L_V8_Aurora@tablet.avif  768w,
+                                                        ./assets/img/4.0_L_V8_Aurora.avif        1024w
                                                     "
                                                     sizes="90vw"
-                                                    src="./assets/img/4.0_L_V8_Aurora.webp"
+                                                    src="./assets/img/4.0_L_V8_Aurora.avif"
                                                     alt="Motor Aurora V8"
                                                     loading="lazy"
                                                 />
