--- a/src/proyectos.html
+++ b/src/proyectos.html
@@ -70,12 +70,12 @@
                                                 <img
                                                     class="img__responsive"
                                                     srcset="
-                                                        ./assets/img/Martin_Auto_Museum-1965_Shelby_AC_Cobra-2@mobile.webp  320w,
-                                                        ./assets/img/Martin_Auto_Museum-1965_Shelby_AC_Cobra-2@tablet.webp  768w,
-                                                        ./assets/img/Martin_Auto_Museum-1965_Shelby_AC_Cobra-2.webp        1024w
+                                                        ./assets/img/Martin_Auto_Museum-1965_Shelby_AC_Cobra-2@mobile.avif  320w,
+                                                        ./assets/img/Martin_Auto_Museum-1965_Shelby_AC_Cobra-2@tablet.avif  768w,
+                                                        ./assets/img/Martin_Auto_Museum-1965_Shelby_AC_Cobra-2.avif        1024w
                                                     "
                                                     sizes="90vw"
-                                                    src="./assets/img/Martin_Auto_Museum-1965_Shelby_AC_Cobra-2.webp"
+                                                    src="./assets/img/Martin_Auto_Museum-1965_Shelby_AC_Cobra-2.avif"
                                                     alt="Firma de Carroll Shelby en un Shelby AC Cobra"
                                                     loading="lazy"
                                                 />
