--- a/src/etapas.html
+++ b/src/etapas.html
@@ -38,9 +38,9 @@
                                 <div class="col-6">
                                     <p>Carroll Hall Shelby (11 de enero de 1923 - 10 de mayo de 2012) fue un diseñador de automóviles, piloto de carreras y empresario estadounidense. Shelby es mejor conocido por su participación en el AC Cobra y el Mustang para Ford Motor Company, que modificó a fines de la década de 1960 y principios de la de 2000. Estableció Shelby American en 1962 para fabricar y comercializar vehículos de alto rendimiento. Su autobiografía, The Carroll Shelby Story, se publicó en 1967. Como piloto de carreras, su punto culminante fue como copiloto de la entrada ganadora de las 24 Horas de Le Mans de 1959.</p>
                                     <picture>
-                                        <source media="(max-width: 800px)" srcset="./assets/img/carroll-shelby-volante-coches-2647593@mobile.webp">
-                                        <source media="(min-width: 801px)" srcset="./assets/img/carroll-shelby-volante-coches-2647593@tablet.webp">
-                                        <img class="img__responsive" src="./assets/img/carroll-shelby-volante-coches-2647593@tablet.webp" loading="lazy" alt="Carroll Shelby tras un volante">
+                                        <source media="(max-width: 800px)" srcset="./assets/img/carroll-shelby-volante-coches-2647593@mobile.avif">
+                                        <source media="(min-width: 801px)" srcset="./assets/img/carroll-shelby-volante-coches-2647593@tablet.avif">
+                                        <img class="img__responsive" src="./assets/img/carroll-shelby-volante-coches-2647593@tablet.avif" loading="lazy" alt="Carroll Shelby tras un volante">
                                     </picture>
                                     <p>
                                         <ul class="seccion__listado">
