--- a/src/presentacion.html
+++ b/src/presentacion.html
@@ -87,6 +87,7 @@
                                     width="560"
                                     height="315"
                                     class="video"
+                                    srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/oKYoxGv_llI?autoplay=1><img src=https://img.youtube.com/vi/oKYoxGv_llI/hqdefault.jpg alt='Video'><span>▶</span></a>"
                                     src="https://www.youtube-nocookie.com/embed/oKYoxGv_llI"
                                     title="YouTube video player"
                                     frameborder="0"
