--- a/src/etapas.html
+++ b/src/etapas.html
@@ -56,7 +56,16 @@
                             </div>
                         </div>
                         <div class="align--center video__container">
-                            <iframe class="video lazyload" width="560" height="315" src="https://www.youtube-nocookie.com/embed/t9MjY-mpspI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe 
+                            class="video lazyload" 
+                            width="560" 
+                            height="315" 
+                            src="https://www.youtube-nocookie.com/embed/t9MjY-mpspI" 
+                            srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/t9MjY-mpspI?autoplay=1><img src=https://img.youtube.com/vi/t9MjY-mpspI/hqdefault.jpg alt='Video'><span>▶</span></a>"
+                            title="YouTube video player" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                            allowfullscreen></iframe>
                         </div>
                     </article>
                 </section>
